# udemy_genai_aws_bedrock

Equipment_SME_Code/: lambda_function.py  streamlit_app.py
Equipment_SME_Code/sme_assistant_ui/: README.md  main.py  pyproject.toml
chatbotapp/: README.md  chatbot_backend.py  chatbot_frontend.py  main.py  pyproject.toml
