[project]
name = "chatbotapp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.43.1",
    "langchain>=1.2.17",
    "langchain-aws>=1.4.5",
    "pyyaml>=6.0.3",
    "streamlit>=1.57.0",
    "transformers>=5.7.0",
]
